--- a/app/src/main/res/drawable/community.xml
+++ b/app/src/main/res/drawable/community.xml
@@ -1,13 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
+    android:width="72dp"
+    android:height="67.87dp"
+    android:viewportWidth="72"
+    android:viewportHeight="67.87">
   <path
-      android:pathData="M11.25,14.752V14.625M18,14.752V14.625M24.75,14.752V14.625M21.669,24.456L18,31.5L14.625,24.456H7.875C6.011,24.456 4.5,22.945 4.5,21.081V7.875C4.5,6.011 6.011,4.5 7.875,4.5H28.125C29.989,4.5 31.5,6.011 31.5,7.875V21.081C31.5,22.945 29.989,24.456 28.125,24.456H21.669Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#7171AF"
-      android:strokeLineCap="round"/>
+      android:pathData="M50.84,67.87c-0.95,0 -1.88,-0.37 -2.58,-1.07l-12.4,-12.31H13.51c-7.45,0 -13.51,-6.06 -13.51,-13.51V13.51C0,6.06 6.06,0 13.51,0h44.97c7.45,0 13.51,6.06 13.51,13.51v27.47c0,7.45 -6.06,13.51 -13.51,13.51h-3.92l-0.05,9.72c0,1.48 -0.9,2.81 -2.27,3.37 -0.46,0.19 -0.93,0.28 -1.41,0.28ZM13.51,5c-4.69,0 -8.51,3.82 -8.51,8.51v27.47c0,4.69 3.82,8.51 8.51,8.51h24.4l11.62,11.53 0.06,-11.53h8.9c4.69,0 8.51,-3.82 8.51,-8.51V13.51c0,-4.69 -3.82,-8.51 -8.51,-8.51H13.51Z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M18.77,24.33L22.56,24.33A1.27,1.27 0,0 1,23.83 25.6L23.83,29.39A1.27,1.27 0,0 1,22.56 30.66L18.77,30.66A1.27,1.27 0,0 1,17.5 29.39L17.5,25.6A1.27,1.27 0,0 1,18.77 24.33z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M34.6,24.33L38.39,24.33A1.27,1.27 0,0 1,39.66 25.6L39.66,29.39A1.27,1.27 0,0 1,38.39 30.66L34.6,30.66A1.27,1.27 0,0 1,33.33 29.39L33.33,25.6A1.27,1.27 0,0 1,34.6 24.33z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M50.44,24.33L54.23,24.33A1.27,1.27 0,0 1,55.5 25.6L55.5,29.39A1.27,1.27 0,0 1,54.23 30.66L50.44,30.66A1.27,1.27 0,0 1,49.17 29.39L49.17,25.6A1.27,1.27 0,0 1,50.44 24.33z"
+      android:fillColor="#9459e2"/>
 </vector>
