--- a/app/src/main/res/drawable/eye_off.xml
+++ b/app/src/main/res/drawable/eye_off.xml
@@ -1,17 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <group>
-    <clip-path
-        android:pathData="M0,0h24v24h-24z"/>
-    <path
-        android:pathData="M17.94,17.94C16.231,19.243 14.149,19.965 12,20C5,20 1,12 1,12C2.244,9.682 3.969,7.657 6.06,6.06M9.9,4.24C10.588,4.079 11.293,3.998 12,4C19,4 23,12 23,12C22.393,13.136 21.669,14.205 20.84,15.19M14.12,14.12C13.845,14.415 13.514,14.651 13.146,14.815C12.778,14.979 12.381,15.067 11.978,15.074C11.575,15.082 11.175,15.007 10.802,14.856C10.428,14.706 10.089,14.481 9.804,14.196C9.519,13.911 9.294,13.572 9.144,13.198C8.993,12.825 8.919,12.425 8.926,12.022C8.933,11.619 9.021,11.222 9.185,10.854C9.349,10.486 9.585,10.155 9.88,9.88M1,1L23,23"
-        android:strokeLineJoin="round"
-        android:strokeWidth="4"
-        android:fillColor="#00000000"
-        android:strokeColor="#000000"
-        android:strokeLineCap="round"/>
-  </group>
+    android:width="66.78dp"
+    android:height="53.76dp"
+    android:viewportWidth="66.78"
+    android:viewportHeight="53.76">
+  <path
+      android:pathData="M33.39,48.38c-14.26,0 -27.19,-8.44 -32.95,-21.49l-0.44,-1.01 0.44,-1.01C6.2,11.82 19.13,3.38 33.39,3.38s27.19,8.44 32.95,21.49l0.44,1.01 -0.44,1.01c-5.76,13.06 -18.69,21.49 -32.95,21.49ZM5.49,25.88c5.17,10.67 16,17.5 27.91,17.5s22.74,-6.83 27.91,-17.5c-5.17,-10.67 -16,-17.5 -27.91,-17.5S10.65,15.21 5.49,25.88Z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M33.89,40.38c-8,0 -14.5,-6.5 -14.5,-14.5s6.5,-14.5 14.5,-14.5 14.5,6.5 14.5,14.5 -6.5,14.5 -14.5,14.5ZM33.89,16.38c-5.24,0 -9.5,4.26 -9.5,9.5s4.26,9.5 9.5,9.5 9.5,-4.26 9.5,-9.5 -4.26,-9.5 -9.5,-9.5Z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M3.237,50l57.004,-49.992l3.297,3.759l-57.004,49.992z"
+      android:fillColor="#9459e2"/>
 </vector>
