--- a/app/src/main/res/drawable/clock.xml
+++ b/app/src/main/res/drawable/clock.xml
@@ -1,13 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
+    android:width="72dp"
+    android:height="72dp"
+    android:viewportWidth="72"
+    android:viewportHeight="72">
   <path
-      android:pathData="M20,10V20L26.667,23.333M36.667,20C36.667,29.205 29.205,36.667 20,36.667C10.795,36.667 3.333,29.205 3.333,20C3.333,10.795 10.795,3.333 20,3.333C29.205,3.333 36.667,10.795 36.667,20Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="4"
-      android:fillColor="#00000000"
-      android:strokeColor="#353563"
-      android:strokeLineCap="round"/>
+      android:pathData="M36,72C16.15,72 0,55.85 0,36S16.15,0 36,0s36,16.15 36,36 -16.15,36 -36,36ZM36,5c-17.09,0 -31,13.91 -31,31s13.91,31 31,31 31,-13.91 31,-31S53.09,5 36,5Z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M49.71,47.14l-16.21,-9.72l0,-24.92l5,0l0,22.08l13.79,8.28l-2.58,4.28z"
+      android:fillColor="#9459e2"/>
 </vector>
