--- a/app/src/main/res/drawable/eye.xml
+++ b/app/src/main/res/drawable/eye.xml
@@ -1,24 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <group>
-    <clip-path
-        android:pathData="M0,0h24v24h-24z"/>
-    <path
-        android:pathData="M1,12C1,12 5,4 12,4C19,4 23,12 23,12C23,12 19,20 12,20C5,20 1,12 1,12Z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="4"
-        android:fillColor="#00000000"
-        android:strokeColor="#000000"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M12,15C13.657,15 15,13.657 15,12C15,10.343 13.657,9 12,9C10.343,9 9,10.343 9,12C9,13.657 10.343,15 12,15Z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="4"
-        android:fillColor="#00000000"
-        android:strokeColor="#000000"
-        android:strokeLineCap="round"/>
-  </group>
+    android:width="66.78dp"
+    android:height="45dp"
+    android:viewportWidth="66.78"
+    android:viewportHeight="45">
+  <path
+      android:pathData="M33.39,45c-14.26,0 -27.19,-8.44 -32.95,-21.49l-0.44,-1.01 0.44,-1.01C6.2,8.44 19.13,0 33.39,0s27.19,8.44 32.95,21.49l0.44,1.01 -0.44,1.01c-5.76,13.06 -18.69,21.49 -32.95,21.49ZM5.49,22.5c5.17,10.67 16,17.5 27.91,17.5s22.74,-6.83 27.91,-17.5c-5.17,-10.67 -16,-17.5 -27.91,-17.5S10.65,11.83 5.49,22.5Z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M33.89,37c-8,0 -14.5,-6.5 -14.5,-14.5s6.5,-14.5 14.5,-14.5 14.5,6.5 14.5,14.5 -6.5,14.5 -14.5,14.5ZM33.89,13c-5.24,0 -9.5,4.26 -9.5,9.5s4.26,9.5 9.5,9.5 9.5,-4.26 9.5,-9.5 -4.26,-9.5 -9.5,-9.5Z"
+      android:fillColor="#9459e2"/>
 </vector>
