--- a/app/src/main/res/drawable/history.xml
+++ b/app/src/main/res/drawable/history.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
+    android:width="33dp"
+    android:height="42.69dp"
+    android:viewportWidth="33"
+    android:viewportHeight="42.69">
   <path
-      android:pathData="M15,31.5C13.35,31.5 11.938,30.913 10.762,29.737C9.587,28.563 9,27.15 9,25.5C9,23.85 9.587,22.438 10.762,21.263C11.938,20.087 13.35,19.5 15,19.5C15.575,19.5 16.1,19.575 16.575,19.725C17.075,19.85 17.55,20.05 18,20.325V4.5H27V10.5H21V25.5C21,27.15 20.413,28.563 19.237,29.737C18.063,30.913 16.65,31.5 15,31.5Z"
-      android:fillColor="#7171AF"/>
+      android:pathData="M14.81,42.69h-4.62c-5.62,0 -10.19,-4.57 -10.19,-10.19s4.57,-10.19 10.19,-10.19h4.62c5.62,0 10.19,4.57 10.19,10.19s-4.57,10.19 -10.19,10.19ZM10.19,27.31c-2.86,0 -5.19,2.33 -5.19,5.19s2.33,5.19 5.19,5.19h4.62c2.86,0 5.19,-2.33 5.19,-5.19s-2.33,-5.19 -5.19,-5.19h-4.62Z"
+      android:fillColor="#9459e2"/>
+  <path
+      android:pathData="M25,34.5l-5,0l0,-34.5l13,0l0,5l-8,0l0,29.5z"
+      android:fillColor="#9459e2"/>
 </vector>
